validating/add-role-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-role-label
spec:
  rules:
  - name: add-role-label-to-pods
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            role: "crew-member"
