validating/config-true-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: config-true-policy
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: check-configmap-label
    match:
      resources:
        kinds:
        - ConfigMap
    validate:
      message: "ConfigMaps must have the label 'updated: true'"
      pattern:
        metadata:
          labels:
            updated: "true"
